Added bootstrap and jquery files using webpack

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Tonysoft</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <h1>No Design Yet</h1>
-    <script src="dist/bundle.js"></script>
+
+    
+
+    <script src="dist/vendor.bundle.js"></script>
+    <script src="dist/app.bundle.js"></script>
   </body>
 </html>
