--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
 
-    
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Hello World</h1>
+        </div>
+      </div>
+    </div>
 
     <script src="dist/vendor.bundle.js"></script>
     <script src="dist/app.bundle.js"></script>
