Finished the primary layout

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
   </head>
   <body>
     <!-- HEADER -->
-    <div class="jumbotron panel-1">
+    <div class="jumbotron bg">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-3">
-            <img src="src/tony2.jpg" class="avatar img-responsive"/>
+          <div class="col-md-3 col-sm-12">
+            <img src="src/tony2.jpg" class="img-responsive"/>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-5 col-sm-12">
             <p class="introduction">
               Hello, I'm Anthony. I am a software engineer who'd like to develop applications for everyday use.
             </p>
             <p class="sub-introduction">
-              For now I am focusing on web applications. If you are looking for a freelancer just email me at <span class="email">webdeveloper.tonysoft@gmail.com</span> so we can discuss
-              about your project.
+              For now I am focusing on web applications. If you are looking for a freelancer just send me an email at 
+              <a class="email" href="mailto:webdeveloper.tonysoft@gmail.com">webdeveloper.tonysoft@gmail.com</a>
+              so we can discuss about your project.
             </p>
+            <hr>
+            <a class="github-button" href="https://github.com/webdevelopertony" data-size="large" aria-label="Follow @webdevelopertony on GitHub">Follow @webdevelopertony</a>
           </div>
         </div>
       </div>
@@ -32,7 +35,7 @@
     <div class="container-fluid">
       <div class="row">
         <!-- LEFT COLUMN -->
-        <div class="col-md-7">
+        <div class="col-md-6 col-md-offset-1">
           <div class="row">
             <div class="col-md-12">
               <div class="panel panel-default">
@@ -125,10 +128,38 @@
           </div>
         </div>
         <!-- RIGHT COLUMN -->
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  <h3 class="caption">PROGRAMMING KNOWLEDGE</h3>
+                  <hr>
+                  <a href="src/Software_Engineer.pdf" target="_blank"><img src="src/Software_Engineer.png" class="img-responsive"/></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  <h3 class="caption">MVA CERTIFICATION</h3>
+                  <hr>
+                  <ul class="list-unstyled">
+                    <li><a class="external-link" href="src/MVA-1.pdf" target="_blank">Web API Design Jump Start</a></li>
+                    <li><a class="external-link" href="src/MVA-2.pdf" target="_blank">Implementing Entity Framework with MVC</a></li>
+                    <li><a class="external-link" href="src/MVA-3.pdf" target="_blank">JavaScript for Experienced Developers</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="dist/vendor.bundle.js"></script>
     <script src="dist/app.bundle.js"></script>
   </body>
