--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="jumbotron bg">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-3 col-sm-12">
+          <div class="col-md-3 col-md-offset-1 col-sm-12">
             <img src="src/tony2.jpg" class="img-responsive"/>
           </div>
-          <div class="col-md-5 col-sm-12">
+          <div class="col-md-4 col-sm-12">
             <p class="introduction">
               Hello, I'm Anthony. I am a software engineer who'd like to develop applications for everyday use.
             </p>
