Clean webpack config

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Tonysoft</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="src/css/main.css">
   </head>
   <body>
     <!-- HEADER -->
@@ -13,7 +13,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3 col-md-offset-1 col-sm-12">
-            <img src="src/tony2.jpg" class="img-responsive"/>
+            <img src="src/img/tony2.jpg" class="img-responsive"/>
           </div>
           <div class="col-md-5 col-sm-12">
             <p class="introduction">
@@ -135,7 +135,7 @@
                 <div class="panel-body">
                   <h3 class="caption">PROGRAMMING KNOWLEDGE</h3>
                   <hr>
-                  <a href="src/Software_Engineer.pdf" target="_blank"><img src="src/Software_Engineer.png" class="img-responsive"/></a>
+                  <a href="src/docs/Software_Engineer.pdf" target="_blank"><img src="src/img/Software_Engineer.png" class="img-responsive"/></a>
                 </div>
               </div>
             </div>
@@ -160,7 +160,7 @@
     </div>
     
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="dist/vendor.bundle.js"></script>
-    <script src="dist/app.bundle.js"></script>
+    <script src="dist/js/common.bundle.js"></script>
+    <script src="dist/js/app.bundle.js"></script>
   </body>
 </html>
