change avatar to circle

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3 col-md-offset-1 col-sm-12">
-            <img src="src/img/tony2.jpg" class="img-responsive"/>
+            <img src="src/img/tony2.jpg" class="avatar img-responsive img-circle center-block"/>
           </div>
           <div class="col-md-5 col-sm-12">
             <p class="introduction">
