--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                   <h3 class="caption">MVA CERTIFICATION</h3>
                   <hr>
                   <ul class="list-unstyled">
-                    <li><a class="external-link" href="src/MVA-1.pdf" target="_blank">Web API Design Jump Start</a></li>
-                    <li><a class="external-link" href="src/MVA-2.pdf" target="_blank">Implementing Entity Framework with MVC</a></li>
-                    <li><a class="external-link" href="src/MVA-3.pdf" target="_blank">JavaScript for Experienced Developers</a></li>
+                    <li><a class="external-link" href="src/docs/MVA-1.pdf" target="_blank">Web API Design Jump Start</a></li>
+                    <li><a class="external-link" href="src/docs/MVA-2.pdf" target="_blank">Implementing Entity Framework with MVC</a></li>
+                    <li><a class="external-link" href="src/docs/MVA-3.pdf" target="_blank">JavaScript for Experienced Developers</a></li>
                   </ul>
                 </div>
               </div>
