--- a/index.html
+++ b/index.html
@@ -9,32 +9,36 @@
   <body>
     <!-- HEADER -->
     <div class="jumbotron bg">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
-          <div class="col-md-3 col-md-offset-1 col-sm-12">
-            <img src="src/img/tony2.jpg" class="avatar img-responsive img-circle center-block"/>
+          <div class="col-md-2 col-sm-12">
+            <img src="src/img/tony.jpg" class="avatar img-responsive img-circle center-block"/>
           </div>
           <div class="col-md-5 col-sm-12">
-            <p class="introduction">
-              Hello, I'm Anthony. I am a software engineer who'd like to develop applications for everyday use.
+            <p class="introduction text-center">
+              Anthony Cortez <br>
+              <span class="sub-introduction">Software Engineer | Information Systems Specialist</span> <br>
             </p>
-            <p class="sub-introduction">
-              For now I am focusing on web applications. If you are looking for a freelancer just send me an email at 
-              <a class="email" href="mailto:webdeveloper.tonysoft@gmail.com">webdeveloper.tonysoft@gmail.com</a>
-              so we can discuss about your project.
+            <p class="text-center">
+              <a class="github-button" href="https://github.com/webdevelopertony" data-size="large" aria-label="Follow @webdevelopertony on GitHub">Follow @webdevelopertony</a>
             </p>
-            <hr>
-            <a class="github-button" href="https://github.com/webdevelopertony" data-size="large" aria-label="Follow @webdevelopertony on GitHub">Follow @webdevelopertony</a>
+          </div>
+          <div class="col-md-offset-1 col-md-4">
+            <div class="dl-resume text-center">
+              <a href="src/docs/AnthonyCortez-Resume.pdf" class="btn btn-danger btn-outline">
+                <span class="glyphicon glyphicon-download"></span> DOWNLOAD RESUME
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
     
     <!-- BODY -->
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <!-- LEFT COLUMN -->
-        <div class="col-md-6 col-md-offset-1">
+        <div class="col-md-8">
           <div class="row">
             <div class="col-md-12">
               <div class="panel panel-default">
@@ -72,7 +76,7 @@
                               <p class="sub-caption">Inhouse Developer</p>
                               <p class="sub-caption">Responsibilities: <br>Implement the given layout, design the online cinema ticketing and integrate MIGs and PayMaya as payment gateway.</p>
                               <p class="sub-caption">Technology Used: [ ASP.NET, Bootstrap, jQuery, MSSQL ]</p>
-                              <a class="external-link" href="https://robinsonsmovieworld.com/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Visit the website</a>
+                              <a class="external-link" href="https://robinsonsmovieworld.com/" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Visit the website</a>
                             </div>
                           </div>  
                       </div>
@@ -86,7 +90,7 @@
                               <p class="sub-caption">Lead Developer of Cinema Website</p>
                               <p class="sub-caption">Responsibilities: <br>Implement the given layout, design the online cinema ticketing plus developed the API for this ticketing and integrate IPAY88 as payment gateway.</p>
                               <p class="sub-caption">Technology Used: [ ASP.NET, Bootstrap, jQuery, MSSQL ]</p>
-                              <a class="external-link" href="http://limketkaicinemas.com/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Visit the website</a>
+                              <a class="external-link" href="http://limketkaicinemas.com/" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Visit the website</a>
                             </div>
                           </div>  
                       </div>
@@ -100,7 +104,7 @@
                               <p class="sub-caption">Lead Developer of Cinema Website</p>
                               <p class="sub-caption">Responsibilities: <br>Design and Implement the layout, Creates an API structure for PHP and Integrate the IPAY88 as payment gateway.</p>
                               <p class="sub-caption">Technology Used: [ PHP, CodeIgniter, Bootstrap, jQuery, MSSQL ]</p>
-                              <a class="external-link" href="http://fisherboxoffice.fishermall.com.ph/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Visit the website</a>
+                              <a class="external-link" href="http://fisherboxoffice.fishermall.com.ph/" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Visit the website</a>
                             </div>
                           </div>  
                       </div>
@@ -114,7 +118,7 @@
                               <p class="sub-caption">Support Developer of Event Ticketing Website</p>
                               <p class="sub-caption">Responsibilities: <br>Create and Utilize the API Functions.</p>
                               <p class="sub-caption">Technology Used: [ PHP, CodeIgniter, MySQL, JQuery ]</p>
-                              <a class="external-link" href="http://fisherboxoffice.fishermall.com.ph/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Visit the website</a>
+                              <a class="external-link" href="http://fisherboxoffice.fishermall.com.ph/" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Visit the website</a>
                             </div>
                           </div>  
                       </div>
@@ -132,7 +136,7 @@
             <div class="col-md-12">
               <div class="panel panel-default">
                 <div class="panel-body">
-                  <h3 class="caption">PROGRAMMING KNOWLEDGE</h3>
+                  <h3 class="caption">PROGRAMMING SKILLS</h3>
                   <hr>
                   <a href="src/docs/Software_Engineer.pdf" target="_blank"><img src="src/img/Software_Engineer.png" class="img-responsive"/></a>
                 </div>
@@ -146,9 +150,9 @@
                   <h3 class="caption">MVA CERTIFICATION</h3>
                   <hr>
                   <ul class="list-unstyled">
-                    <li><a class="external-link" href="src/docs/MVA-1.pdf" target="_blank">Web API Design Jump Start</a></li>
-                    <li><a class="external-link" href="src/docs/MVA-2.pdf" target="_blank">Implementing Entity Framework with MVC</a></li>
-                    <li><a class="external-link" href="src/docs/MVA-3.pdf" target="_blank">JavaScript for Experienced Developers</a></li>
+                    <li><a class="external-link" href="src/docs/MVA-1.pdf" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Web API Design Jump Start</a></li>
+                    <li><a class="external-link" href="src/docs/MVA-2.pdf" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Implementing Entity Framework with MVC</a></li>
+                    <li><a class="external-link" href="src/docs/MVA-3.pdf" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> JavaScript for Experienced Developers</a></li>
                   </ul>
                 </div>
               </div>
