Fix Website Links

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                         <h4 class="caption">Robinsons Movieworld</h3>
                           <div class="row">
                             <div class="col-md-12">
-                              <p class="sub-caption">Inhouse Developer</p>
+                              <p class="sub-caption">Lead Developer of Cinema Website</p>
                               <p class="sub-caption">Responsibilities: <br>Implement the given layout, design the online cinema ticketing and integrate MIGs and PayMaya as payment gateway.</p>
                               <p class="sub-caption">Technology Used: [ ASP.NET, Bootstrap, jQuery, MSSQL ]</p>
-                              <a class="external-link" href="https://robinsonsmovieworld.com/" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Visit the website</a>
+                              <a class="external-link" href="http://robinsonsmovieworld.com/" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Visit the website</a>
                             </div>
                           </div>  
                       </div>
@@ -118,7 +118,7 @@
                               <p class="sub-caption">Support Developer of Event Ticketing Website</p>
                               <p class="sub-caption">Responsibilities: <br>Create and Utilize the API Functions.</p>
                               <p class="sub-caption">Technology Used: [ PHP, CodeIgniter, MySQL, JQuery ]</p>
-                              <a class="external-link" href="http://fisherboxoffice.fishermall.com.ph/" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Visit the website</a>
+                              <a class="external-link" href="https://smtickets.com/" target="_blank"><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Visit the website</a>
                             </div>
                           </div>  
                       </div>
