--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-2 col-sm-12">
-            <img src="src/img/tony.jpg" class="avatar img-responsive img-circle center-block"/>
+            <img src="src/img/tony2.jpg" class="avatar img-responsive img-circle center-block"/>
           </div>
           <div class="col-md-5 col-sm-12">
             <p class="introduction text-center">
@@ -25,7 +25,7 @@
           </div>
           <div class="col-md-offset-1 col-md-4">
             <div class="dl-resume text-center">
-              <a href="src/docs/AnthonyCortez-Resume.pdf" class="btn btn-danger btn-outline">
+              <a href="src/docs/AnthonyCortez-Resume.pdf" class="btn btn-default btn-outline">
                 <span class="glyphicon glyphicon-download"></span> DOWNLOAD RESUME
               </a>
             </div>
