Added a link to blog site

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
         </div>
       </div>
     </div>
-    
+    <div class="row blog-container">
+      <div class="col-md-12">
+        <div class="container">
+          <h4 class="caption">My blog is up and running. Please visit 
+            <a class="blog-link" href="https://webdevelopertony.github.io/blog/">tonysoft</a>
+            to learn more about technical stuff.
+          </h4>
+        </div>
+      </div>
+    </div>
     <!-- BODY -->
     <div class="container">
       <div class="row">
