Fix follow button also add facebook

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
               Anthony Cortez <br>
               <span class="sub-introduction">Software Engineer | Information Systems Specialist</span> <br>
             </p>
-            <p class="text-center">
-              <a class="github-button" href="https://github.com/webdevelopertony" data-size="large" aria-label="Follow @webdevelopertony on GitHub">Follow @webdevelopertony</a>
-            </p>
+            <!-- Place this tag where you want the button to render. -->
+            <div class="text-center">
+              <iframe src="https://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Ftonytheinternetsownboy&amp;layout=button&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:63px; height:20px;" allowTransparency="true"></iframe>
+              <iframe src="https://ghbtns.com/github-btn.html?user=webdevelopertony&type=follow&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+            </div>
+            
           </div>
           <div class="col-md-offset-1 col-md-4">
             <div class="dl-resume text-center">
@@ -170,8 +173,7 @@
         </div>
       </div>
     </div>
-    
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+
     <script src="dist/js/common.bundle.js"></script>
     <script src="dist/js/app.bundle.js"></script>
   </body>
