Fix links for url update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- Place this tag where you want the button to render. -->
             <div class="text-center">
               <iframe src="https://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Ftonytheinternetsownboy&amp;layout=button&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:63px; height:20px;" allowTransparency="true"></iframe>
-              <iframe src="https://ghbtns.com/github-btn.html?user=webdevelopertony&type=follow&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+              <iframe src="https://ghbtns.com/github-btn.html?user=devtonysoft&type=follow&count=false" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
             </div>
             
           </div>
@@ -40,7 +40,7 @@
       <div class="col-md-12">
         <div class="container">
           <h4 class="caption">My blog is up and running. Please visit 
-            <a class="blog-link" href="https://webdevelopertony.github.io/blog/">tonysoft</a>
+            <a class="blog-link" href="https://devtonysoft.github.io/blog/">tonysoft</a>
             to learn more about technical stuff.
           </h4>
         </div>
@@ -69,7 +69,6 @@
                               <p class="sub-caption">Role: Inhouse Developer</p>
                               <p class="sub-caption">Responsibilities: <br>Design an entity relationship diagram and database structure and developed an API with the front-end application</p>
                               <p class="sub-caption">Technology Used: [ ASP.NET, Bootstrap, jQuery, MSSQL, MS Power BI ]</p>
-                              
                             </div>
                           </div>  
                       </div>
