Fix link for blog

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="col-md-12">
         <div class="container">
           <h4 class="caption">My blog is up and running. Please visit 
-            <a class="blog-link" href="https://devtonysoft.github.io/blog/">tonysoft</a>
+            <a class="blog-link" href="https://iamtonysoft.github.io/blog/">tonysoft</a>
             to learn more about technical stuff.
           </h4>
         </div>
