Fix social media and text shadow

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           </div>
           <div class="col-md-5 col-sm-12">
             <p class="introduction text-center">
-              Anthony Cortez <br>
+              ANTHONY CORTEZ <br>
               <span class="sub-introduction">Software Engineer | Information Systems Specialist</span> <br>
             </p>
             <!-- Place this tag where you want the button to render. -->
             <div class="text-center">
-              <iframe src="https://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Ftonytheinternetsownboy&amp;layout=button&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:63px; height:20px;" allowTransparency="true"></iframe>
-              <iframe src="https://ghbtns.com/github-btn.html?user=devtonysoft&type=follow&count=false" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+              <iframe src="https://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Fiamtonysoft&amp;layout=button&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:63px; height:20px;" allowTransparency="true"></iframe>
+              <iframe src="https://ghbtns.com/github-btn.html?user=iamtony&type=follow&count=false" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
             </div>
             
           </div>
@@ -39,7 +39,7 @@
     <div class="row blog-container">
       <div class="col-md-12">
         <div class="container">
-          <h4 class="caption">My blog is up and running. Please visit 
+          <h4>My blog is up and running. Please visit 
             <a class="blog-link" href="https://iamtonysoft.github.io/blog/">tonysoft</a>
             to learn more about technical stuff.
           </h4>
