Fixed github follow button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- Place this tag where you want the button to render. -->
             <div class="text-center">
               <iframe src="https://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Fiamtonysoft&amp;layout=button&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:63px; height:20px;" allowTransparency="true"></iframe>
-              <iframe src="https://ghbtns.com/github-btn.html?user=iamtony&type=follow&count=false" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+              <iframe src="https://ghbtns.com/github-btn.html?user=iamtonysoft&type=follow&count=false" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
             </div>
             
           </div>
