--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="col-md-offset-1 col-md-4">
             <div class="dl-resume text-center">
-              <a href="src/docs/AnthonyCortez-Resume.pdf" target="_blank" class="btn btn-default btn-outline">
+              <a href="src/docs/AnthonyCortez.pdf" target="_blank" class="btn btn-default btn-outline">
                 <span class="glyphicon glyphicon-download"></span> DOWNLOAD RESUME
               </a>
             </div>
