Added Meta Tags for facebook

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>Tonysoft</title>
         <link rel="stylesheet" href="app/dist/css/app.bundle.css">
+        <meta property="og:url"                content="https://iamtonysoft.github.io/" />
+        <meta property="og:type"               content="website" />
+        <meta property="og:title"              content="TONYSOFT" />
+        <meta property="og:description"        content="Internet is my bestfriend..." />
+        <meta property="og:image"              content="https://s-media-cache-ak0.pinimg.com/originals/5f/d0/98/5fd09817be8a9f5889064ac8bad39961.jpg" />
     </head>
     <body id="top">
     
