--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <h3 class="uk-text-center uk-text-center@s uk-padding-large uk-heading-line"><span>PROGRAMMING SKILLS</span></h3>
                     <div class="uk-grid uk-child-width-1-1@m" uk-grid>
                         <div uk-lightbox="animation: scale">
-                            <a href="app/src/img/skills.png" caption="Skill That I Learned Through Experience"><img src="app/src/img/skills.png" alt></a>
+                            <a href="app/src/img/skills.png" caption="Skills That I Learned Through Experience"><img src="app/src/img/skills.png" alt></a>
                         </div>
                     </div>
                </div>
