Added external link highlight color

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                             <div>
                                 <ul class="uk-navbar-nav">
                                     <li><a href="#certification" uk-scroll>Certification</a></li>
-                                    <li><a href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
-                                    <li><a href="app/src/file/AnthonyCortez.pdf" target="_blank">Résumé</a></li>
+                                    <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
+                                    <li><a class="text-orange" href="app/src/file/AnthonyCortez.pdf" target="_blank">Résumé</a></li>
                                 </ul>
                             </div>
                         </div>
