--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>Tonysoft</title>
         <link rel="stylesheet" href="app/dist/css/app.bundle.css">
+        <meta name="description" content="Anthony Cortez Portfolio">
+        <meta name="keywords" content="HTML,CSS,XML,JavaScript, Web Development, Software Engineer, Programmer">
+        <meta name="author" content="Anthony Cortez">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Facebook Meta Tags -->
         <meta property="og:url"                content="https://iamtonysoft.github.io/" />
         <meta property="og:type"               content="website" />
         <meta property="og:title"              content="TONYSOFT" />
