--- a/index.html
+++ b/index.html
@@ -193,17 +193,24 @@
 
                     <button class="uk-offcanvas-close" type="button" uk-close></button>
 
-                    <h3>MENU</h3>
+                    
 
-                    <ul class="uk-list uk-list-divider">
-                        <li><a href="#top">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#experience">Experience</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#certification">Certification</a></li>
-                        <li><a href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
-                        <li><a href="app/src/file/AnthonyCortez.pdf" target="_blank">Résumé</a></li>
-                    </ul>
+                    <div class="uk-container">
+                        <div class="uk-grid uk-child-width-1-1@m" uk-grid>
+                            <div class="uk-text-center uk-text-center@s uk-position-center">
+                                <h1 class="uk-heading-line uk-text-center"><span>TONYSOFT</span></h1>
+                                <ul id="menu-list" class="uk-list uk-text-large">
+                                    <li><a href="https://iamtonysoft.github.io">Home</a></li>
+                                    <li><a href="#about">About</a></li>
+                                    <li><a href="#experience">Experience</a></li>
+                                    <li><a href="#skills">Skills</a></li>
+                                    <li><a href="#certification">Certification</a></li>
+                                    <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
+                                    <li><a class="text-orange" href="app/src/file/AnthonyCortez.pdf" target="_blank">Résumé</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
