Add cursive style on Tonysoft text

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
              <!-- NAVBAR -->
             <div class="uk-hidden@m">
                 <nav class="uk-navbar uk-navbar-container uk-margin uk-margin-remove-bottom" uk-navbar uk-sticky>
-                    <!-- <div class="uk-navbar-center">
-                        <a class="uk-navbar-item uk-logo" href="#top" uk-scroll>I AM TONY</a> 
-                    </div> -->
+                     <div class="uk-navbar-center">
+                        <a class="uk-navbar-item uk-logo text-cursive" href="https://iamtonysoft.github.io" uk-scroll>TONYSOFT</a> 
+                    </div> 
                     <div class="uk-navbar-right">
                         <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-usage" uk-toggle></a>
                     </div> 
@@ -44,7 +44,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <a class="uk-navbar-item uk-logo" href="#top" uk-scroll>TONYSOFT</a>
+                        <a class="uk-navbar-item uk-logo text-cursive" href="#top" uk-scroll>TONYSOFT</a>
                         <div class="uk-navbar-center-right">
                             <div>
                                 <ul class="uk-navbar-nav">
@@ -191,15 +191,13 @@
             <div id="offcanvas-usage" uk-offcanvas="flip: true; overlay: true">
                 <div class="uk-offcanvas-bar">
 
-                    <button class="uk-offcanvas-close" type="button" uk-close></button>
-
-                    
+                    <a class="uk-offcanvas-close" uk-close></a>
 
                     <div class="uk-container">
                         <div class="uk-grid uk-child-width-1-1@m" uk-grid>
                             <div class="uk-text-center uk-text-center@s uk-position-center">
-                                <h1 class="uk-heading-line uk-text-center"><span>TONYSOFT</span></h1>
-                                <ul id="menu-list" class="uk-list uk-text-large">
+                                <h3 class="uk-heading-line"><span class="text-cursive">TONYSOFT</span></h3>
+                                <ul id="menu-list" class="uk-list">
                                     <li><a href="https://iamtonysoft.github.io">Home</a></li>
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#experience">Experience</a></li>
