Added industry in work experience

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                         <div class="uk-text-center uk-text-center@s">
                             <h3 class="uk-margin-remove">Software Engineer</h3>
                             <p class="uk-margin-remove">MobileGroup, Inc. (July 2014 - August 2016)</p>
+                            <p>Industry: Computer / Information Technology (Software)</p>
                             <p>Projects: 
                                 <a class="text-orange" href="http://robinsonsmovieworld.com/" target="_blank">Robinsons Movieworld</a>,  
                                 <a class="text-orange" href="http://limketkaicinemas.com/" target="_blank">Limketkai Cinemas</a>, 
@@ -123,6 +124,7 @@
                         <div class="uk-text-center uk-text-center@s">
                             <h3 class="uk-margin-remove">Information Systems Specialist</h3>
                             <p class="uk-margin-remove">FDC Utilities, Inc. (August 2016 - December 2016)</p>
+                            <p>Industry: Utilities / Power</p>
                             <p>Project: Energy Trading and Risk Management</p>
                             <p>Responsibilities: Data Gathering, Design an Entity Relationship Diagram and Database Structure, Developed an API with the Front-End Application</p>
                         </div>
