Added work exp (FastTrack)

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 
                 <div class="uk-container" uk-scrollspy="cls: uk-animation-fade; repeat: true">
                     <h3 class="uk-text-center uk-text-center@s uk-padding-large uk-heading-line"><span>WORK EXPERIENCE</span></h3>
-                    <div class="uk-grid-match uk-child-width-1-2@m" uk-grid>
+                    <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
                         <div class="uk-text-center uk-text-center@s">
                             <h3 class="uk-margin-remove">Software Engineer</h3>
                             <p class="uk-margin-remove">MobileGroup, Inc. (July 2014 - August 2016)</p>
@@ -128,6 +128,13 @@
                             <p>Industry: Utilities / Power</p>
                             <p>Project: Energy Trading and Risk Management</p>
                             <p>Responsibilities: Data Gathering, Design an Entity Relationship Diagram and Database Structure, Developed an API with the Front-End Application</p>
+                        </div>
+                        <div class="uk-text-center uk-text-center@s">
+                            <h3 class="uk-margin-remove">Technical Consultant</h3>
+                            <p class="uk-margin-remove">FastTrack Solutions, Inc. (April 2018 - Present)</p>
+                            <p>Industry: Computer / Information Technology (Software) / Consultancy / ERP</p>
+                            <p>Project: SAP B1 Portal</p>
+                            <p>Responsibilities: Develop a web application that can be integrated to SAP B1 Application</p>
                         </div>
                     </div>
                 </div>
