Added technical consultant in header

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="uk-grid uk-child-width-1-1@m" uk-grid>
                         <div id="intro" class="uk-text-center" uk-scrollspy="cls: uk-animation-slide-bottom-medium; repeat: true">
                             <h1 class="uk-margin-remove-bottom uk-heading-hero">I AM TONY</h1>
-                            <p class="uk-margin-remove-top">Software Engineer | Information Systems Specialist</p>
+                            <p class="uk-margin-remove-top">Software Engineer | Information Systems Specialist | Technical Consultant</p>
                             <blockquote id="quotation" cite="#">
                                 <p class="uk-margin-small-bottom">"Hardwork betrays none, but dreams betray many"</p>
                                 <footer>Hikigaya Hachiman</footer>
