--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <meta property="og:image"              content="https://s-media-cache-ak0.pinimg.com/originals/5f/d0/98/5fd09817be8a9f5889064ac8bad39961.jpg" />
     </head>
     <body id="top">
-    
         <div class="uk-offcanvas-content">
 
             <!-- The whole page content goes here -->
@@ -50,7 +49,7 @@
                                 <ul class="uk-navbar-nav">
                                     <li><a href="#certification" uk-scroll>Certification</a></li>
                                     <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
-                                    <li><a class="text-orange" href="app/src/file/AnthonyCortez.pdf" target="_blank">Résumé</a></li>
+                                    <li><a class="text-orange" href="app/src/file/Tony.pdf" target="_blank">Résumé</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -134,7 +133,7 @@
                             <p class="uk-margin-remove">FastTrack Solutions, Inc. (April 2018 - Present)</p>
                             <p>Industry: Computer / Information Technology (Software) / Consultancy / ERP</p>
                             <p>Project: SAP B1 Portal</p>
-                            <p>Responsibilities: Develop a web application that can be integrated to SAP B1 Application</p>
+                            <p>Responsibilities: Develop SAP Web Portal Application, Batch Programs (.exe) & Add-Ons</p>
                         </div>
                     </div>
                 </div>
@@ -214,7 +213,7 @@
                                     <li><a href="#skills">Skills</a></li>
                                     <li><a href="#certification">Certification</a></li>
                                     <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
-                                    <li><a class="text-orange" href="app/src/file/AnthonyCortez.pdf" target="_blank">Résumé</a></li>
+                                    <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">Résumé</a></li>
                                 </ul>
                             </div>
                         </div>
