Fixed Link for CV

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <ul class="uk-navbar-nav">
                                     <li><a href="#certification" uk-scroll>Certification</a></li>
                                     <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
-                                    <li><a class="text-orange" href="app/src/file/Tony.pdf" target="_blank">Résumé</a></li>
+                                    <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">CV</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                     <li><a href="#skills">Skills</a></li>
                                     <li><a href="#certification">Certification</a></li>
                                     <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
-                                    <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">Résumé</a></li>
+                                    <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">CV</a></li>
                                 </ul>
                             </div>
                         </div>
